--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </a></li>
                     <li><a href="events.html" class="link">EVENTS</a></li>
                     <li><a href="resources.html" class="link">RESOURCES</a></li>
-                    <li><a href="https://hhsclubwebsites.github.io/clubdirectory/" class="link">BACK TO DIRECTORY</a></li>
+                    <li><a href="https://www.homesteadhs.club/#" target="_blank" rel="noopener noreferrer" class="link">BACK TO DIRECTORY</a></li>
                     <li class="last-link"><a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a></li>
@@ -121,7 +121,7 @@
                                 <div class="footer-space"></div>
                                 <li><a href="resources.html" class="footer-list-link">RESOURCES</a></li>
                                 <div class="footer-space"></div>
-                                <li><a href="https://hhsclubwebsites.github.io/clubdirectory/" class="footer-list-link">DIRECTORY</a></li>
+                                <li><a href="https://www.homesteadhs.club/#" target="_blank" rel="noopener noreferrer" class="footer-list-link">BACK TO DIRECTORY</a></li>
                             </ul>
                         <!-- </div> -->
                     </div>
